# tlog

./: .gitignore  Cargo.toml
src/: config.rs  dir.rs  input.rs  main.rs  open.rs  out.rs  projects.rs  task.rs  tasks.rs
tui/: Cargo.toml
tui/src/: lib.rs
