workspace = { members = ["tui"] }

[package]
name = "tlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
homedir = "0.2.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
tui = { path = "./tui" }
